InnoDB: Fix ALTER TABLE t DISCARD TABLESPACE (Bug #5851)